Name:                warp-fibers
Version:             3.2.22
Synopsis:            A reimplementation of warp in eta-fibers
License:             MIT
License-file:        LICENSE
Author:              Michael Snoyman, Kazu Yamamoto, Matt Brown
Maintainer:          ouromoros@gmail.com
Homepage:            
Category:            Web, Yesod
Build-Type:          Simple
Cabal-Version:       >=1.8
Stability:           Stable
description:         HTTP\/1.0, HTTP\/1.1 and HTTP\/2 are supported.
                     For HTTP\/2,  Warp supports direct and ALPN (in TLS)
                     but not upgrade.
extra-source-files:  ChangeLog.md
                     README.md

Flag network-bytestring
    Default: False

Flag allow-sendfilefd
    Description: Allow use of sendfileFd (not available on GNU/kFreeBSD)
    Default:     True

Flag warp-debug
    Description: print debug output. not suitable for production
    Default:     False

Library
  Build-Depends:     base                      >= 4.8        && < 4.9
                   , array
                   , async
                   , auto-update               >= 0.1.3    && < 0.2
                   , bsb-http-chunked                         < 0.1
                   , bytestring                >= 0.9.1.4
                   , case-insensitive          >= 0.2
                   , containers
                   , ghc-prim
                   , http-types                >= 0.9.1
                   , iproute                   >= 1.3.1
                   , http2                     >= 1.6      && < 1.7
                   -- , simple-sendfile           >= 0.2.7    && < 0.3
                   , time
                   , wai                       >= 3.2      && < 3.3
                   , text
                   , streaming-commons         >= 0.1.10
                   , vault                     >= 0.3
                   , stm                       >= 2.3
                   , word8
                   , hashable
                   , http-date
                   , fibers-network
                --    , eta-fibers-dev
                   , eta-fibers-new
                   , vault
  if impl(eta >= 0.0.9.7)
     build-depends:    eta-java-interop
     cpp-options:      -DINTEROP
  if impl(ghc < 8)
      Build-Depends: semigroups
  if flag(network-bytestring)
      Build-Depends: network                   >= 2.2.1.5  && < 2.2.3
                   , network-bytestring        >= 0.1.3    && < 0.1.4
  else
      Build-Depends: network               >= 2.3
  Exposed-modules:   Network.Wai.Handler.Warp
                     Network.Wai.Handler.Warp.Internal
                     Network.Wai.Handler.Warp.ResponseBuilder
  Other-modules:     Network.Wai.Handler.Warp.Buffer
                     Network.Wai.Handler.Warp.Conduit
                     Network.Wai.Handler.Warp.Counter
                     Network.Wai.Handler.Warp.Date
                     Network.Wai.Handler.Warp.FdCache
                     Network.Wai.Handler.Warp.File
                     Network.Wai.Handler.Warp.FileInfoCache
                     Network.Wai.Handler.Warp.HashMap
                     Network.Wai.Handler.Warp.HTTP2
                     Network.Wai.Handler.Warp.HTTP2.EncodeFrame
                     Network.Wai.Handler.Warp.HTTP2.File
                     Network.Wai.Handler.Warp.HTTP2.HPACK
                     Network.Wai.Handler.Warp.HTTP2.Manager
                     Network.Wai.Handler.Warp.HTTP2.Receiver
                     Network.Wai.Handler.Warp.HTTP2.Request
                     Network.Wai.Handler.Warp.HTTP2.Sender
                     Network.Wai.Handler.Warp.HTTP2.Types
                     Network.Wai.Handler.Warp.HTTP2.Worker
                     Network.Wai.Handler.Warp.Header
                     Network.Wai.Handler.Warp.IO
                     Network.Wai.Handler.Warp.Imports
                     Network.Wai.Handler.Warp.PackInt
                     Network.Wai.Handler.Warp.ReadInt
                     Network.Wai.Handler.Warp.Recv
                     Network.Wai.Handler.Warp.Request
                     Network.Wai.Handler.Warp.RequestHeader
                     Network.Wai.Handler.Warp.Response
                     Network.Wai.Handler.Warp.ResponseHeader
                     Network.Wai.Handler.Warp.Run
                     Network.Wai.Handler.Warp.SendFile
                     Network.Wai.Handler.Warp.Settings
                     Network.Wai.Handler.Warp.Timeout
                     Network.Wai.Handler.Warp.Types
                     Network.Wai.Handler.Warp.WithApplication
                     Network.Wai.Handler.Warp.Fiber
                     Paths_warp_fibers
  Ghc-Options:       -Wall
--   eta-options:       -ddump-cg-trace

  if flag(warp-debug)
      Cpp-Options:   -DWARP_DEBUG
